B&L QA/objects/Service_Product__c.object
<CustomObject>
    <fields>
        <fullName>Analysis_and_Treatment__c</fullName>
        <description>APAC CHNSU field:Analysis and treatment of  Engineer Service Visit</description>
        <label>Analysis and Treatment</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Blank1__c</fullName>
        <formula>TRIM(&apos;&apos;)</formula>
        <label>.</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Blank2__c</fullName>
        <formula>TRIM(&apos;&apos;)</formula>
        <label>.</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Breakdown_Type__c</fullName>
        <description>APAC CHNSU field:Breakdown reason of the machine</description>
        <label>Breakdown Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Not failure</fullName>
                </value>
                <value>
                    <fullName>IAV/VFM</fullName>
                </value>
                <value>
                    <fullName>PER/AFM</fullName>
                </value>
                <value>
                    <fullName>Software</fullName>
                </value>
                <value>
                    <fullName>Ultrasound</fullName>
                </value>
                <value>
                    <fullName>Computer</fullName>
                </value>
                <value>
                    <fullName>Foot Control</fullName>
                </value>
                <value>
                    <fullName>IV Pole</fullName>
                </value>
                <value>
                    <fullName>Compressor</fullName>
                </value>
                <value>
                    <fullName>Scissors/Air</fullName>
                </value>
                <value>
                    <fullName>Illumination</fullName>
                </value>
                <value>
                    <fullName>Power</fullName>
                </value>
                <value>
                    <fullName>Laser</fullName>
                </value>
                <value>
                    <fullName>Viscous Fluid</fullName>
                </value>
                <value>
                    <fullName>High Speed Vit</fullName>
                </value>
                <value>
                    <fullName>Coagulation</fullName>
                </value>
                <value>
                    <fullName>Application</fullName>
                </value>
                <value>
                    <fullName>Multimedia</fullName>
                </value>
                <value>
                    <fullName>Hand Piece</fullName>
                </value>
                <value>
                    <fullName>Base</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Call_Objective1__c</fullName>
        <label>Call Objective</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Surgery for sample</fullName>
                </value>
                <value>
                    <fullName>Surgery for sell</fullName>
                </value>
                <value>
                    <fullName>Bidding support</fullName>
                </value>
                <value>
                    <fullName>Product introduction</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Call_Objective2__c</fullName>
        <label>Call Objective</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Surgery for sample</fullName>
                </value>
                <value>
                    <fullName>Surgery for sell</fullName>
                </value>
                <value>
                    <fullName>Bidding support</fullName>
                </value>
                <value>
                    <fullName>Product introduction</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Call_Objective__c</fullName>
        <description>APAC CHNSU field:Call purpose of Engineer Service Visit</description>
        <label>Call Objective</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Inst/dism</fullName>
                </value>
                <value>
                    <fullName>Upgrade</fullName>
                </value>
                <value>
                    <fullName>Application</fullName>
                </value>
                <value>
                    <fullName>PM</fullName>
                </value>
                <value>
                    <fullName>Repair</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Call_Result1__c</fullName>
        <label>Call Result</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>need follow up</fullName>
                </value>
                <value>
                    <fullName>satisfaction, don&apos;t need follow up</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Call_Result2__c</fullName>
        <label>Call Result</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>need follow up</fullName>
                </value>
                <value>
                    <fullName>satisfaction, don&apos;t need follow up</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Call_Type__c</fullName>
        <description>APAC CHNSU field:Call type of Engineer Service Visit</description>
        <label>Call Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Warranty</fullName>
                </value>
                <value>
                    <fullName>Contract</fullName>
                </value>
                <value>
                    <fullName>Billable</fullName>
                </value>
                <value>
                    <fullName>Free</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Comments__c</fullName>
        <description>APAC CHNSU field:Comments  of the Engineer after provide service</description>
        <label>Comments</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Customer_Feedback__c</fullName>
        <description>APAC CHNSU field:The Feed Back of Engineer Service Visit</description>
        <label>Customer Feedback</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Equipment_used_by_Dr1__c</fullName>
        <label>Equipment used by Dr</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Equipment_used_by_Dr2__c</fullName>
        <label>Equipment used by Dr</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Experiences1__c</fullName>
        <label>Experiences</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Experiences2__c</fullName>
        <label>Experiences</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>FirstUpdate__c</fullName>
        <defaultValue>false</defaultValue>
        <label>FirstUpdate</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>I_A_B_H1__c</fullName>
        <label>I/A - B/H</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>I_A_B_H2__c</fullName>
        <label>I/A - B/H</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>I_A_U_S1__c</fullName>
        <label>I/A - U/S</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>I_A_U_S2__c</fullName>
        <label>I/A - U/S</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>I_A_Vac1__c</fullName>
        <label>I/A - Vac</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>I_A_Vac2__c</fullName>
        <label>I/A - Vac</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>IsValidServiceProduct__c</fullName>
        <formula>IF(
          
	
		 
		AND
	  	(		
		 NOT(OR(ISBLANK(Text(Call_Result1__c)),ISBLANK(TEXT(Call_Objective1__c)),ISBLANK( TEXT(Product1__c) ),ISBLANK(Experiences1__c)    )),                   

      

          
	
		
			OR(
			
	        		NOT(OR(	ISBLANK(TEXT(Call_Result2__c)),ISBLANK(TEXT(Call_Objective2__c)),ISBLANK(TEXT(Product1__c)),ISBLANK(Experiences2__c) )),
	
				AND(ISBLANK(Equipment_used_by_Dr2__c),ISBLANK(Operation_Characteristic2__c),ISBLANK(Experiences2__c),
				    ISBLANK(Objective_Description2__c),ISBLANK(Phaco_1_8_B_H2__c),
				    ISBLANK(Phaco_1_8_Vac2__c),ISBLANK(Phaco_1_8_U_S2__c),ISBLANK(Phaco_2_2_B_H2__c),ISBLANK(Phaco_2_2_U_S2__c),
				    ISBLANK(Phaco_2_2_Vac2__c),ISBLANK(Phaco_2_8_B_H2__c),ISBLANK(Phaco_2_8_U_S2__c),
				    ISBLANK(Phaco_2_8_Vac2__c),ISBLANK(Solution_in_Operation2__c),ISBLANK(Matters_in_Operation2__c),
			            ISBLANK(Operation_Feedback2__c),ISBLANK(I_A_B_H2__c),ISBLANK(I_A_U_S2__c),ISBLANK(I_A_Vac2__c),ISBLANK(TEXT(Product2__c)),
			 	    ISBLANK(TEXT(Call_Objective2__c)),ISBLANK(TEXT(Call_Result2__c)))
		  		        
			 )
			
		)
		
	 





	,1,0



)</formula>
        <label>IsValidServiceProduct</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Machine_Purpose__c</fullName>
        <description>APAC CHNSU field:Machine purpose of Engineer Service Visit</description>
        <label>Machine Purpose</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>High</fullName>
                </value>
                <value>
                    <fullName>Low</fullName>
                </value>
                <value>
                    <fullName>Halt</fullName>
                </value>
                <value>
                    <fullName>BL Demo</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Machine_Serial_No__c</fullName>
        <description>APAC CHNSU field:Machine serial number of Engineer Service Visit</description>
        <label>Machine Serial No.</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Machine_Status_after_Service__c</fullName>
        <description>APAC CHNSU field:Condition of the machine after  Engineer Service Visit</description>
        <label>Machine Status after Service</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Up</fullName>
                </value>
                <value>
                    <fullName>Part Down</fullName>
                </value>
                <value>
                    <fullName>Down</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Machine__c</fullName>
        <description>APAC CHNSU field:Machine name of Engineer Service Visit</description>
        <label>Machine</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Stellaris</fullName>
                </value>
                <value>
                    <fullName>Stellaris PC</fullName>
                </value>
                <value>
                    <fullName>CX1000</fullName>
                </value>
                <value>
                    <fullName>CX2000</fullName>
                </value>
                <value>
                    <fullName>CX3000</fullName>
                </value>
                <value>
                    <fullName>Protege</fullName>
                </value>
                <value>
                    <fullName>Premiere</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Matters_in_Operation1__c</fullName>
        <label>Matters in Operation</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Matters_in_Operation2__c</fullName>
        <label>Matters in Operation</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Objective_Description1__c</fullName>
        <label>Objective Description</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Objective_Description2__c</fullName>
        <label>Objective Description</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Operation_Characteristic1__c</fullName>
        <label>Operation Characteristic</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Operation_Characteristic2__c</fullName>
        <label>Operation Characteristic</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Operation_Feedback1__c</fullName>
        <label>Operation Feedback</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Operation_Feedback2__c</fullName>
        <label>Operation Feedback</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Phaco_1_8_B_H1__c</fullName>
        <label>Phaco 1.8 - B/H</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Phaco_1_8_B_H2__c</fullName>
        <label>Phaco 1.8 - B/H</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Phaco_1_8_U_S1__c</fullName>
        <label>Phaco 1.8 - U/S</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Phaco_1_8_U_S2__c</fullName>
        <label>Phaco 1.8 - U/S</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Phaco_1_8_Vac1__c</fullName>
        <label>Phaco 1.8 - Vac</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Phaco_1_8_Vac2__c</fullName>
        <label>Phaco 1.8 - Vac</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Phaco_2_2_B_H1__c</fullName>
        <label>Phaco 2.2 - B/H</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Phaco_2_2_U_S1__c</fullName>
        <label>Phaco 2.2 - U/S</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Phaco_2_2_Vac1__c</fullName>
        <label>Phaco 2.2 - Vac</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Physician_Visit__c</fullName>
        <description>APAC CHNSU field:The related Engineer Physician Visit of the service product.</description>
        <label>Physician Visit</label>
        <referenceTo>Physician_Visit__c</referenceTo>
        <relationshipLabel>Service Products</relationshipLabel>
        <relationshipName>Service_Products</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Product1__c</fullName>
        <label>Product</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Stellaris</fullName>
                </value>
                <value>
                    <fullName>Stellaris PC</fullName>
                </value>
                <value>
                    <fullName>CX1000</fullName>
                </value>
                <value>
                    <fullName>CX2000</fullName>
                </value>
                <value>
                    <fullName>CX3000</fullName>
                </value>
                <value>
                    <fullName>Protege</fullName>
                </value>
                <value>
                    <fullName>Premiere</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Product2__c</fullName>
        <label>Product</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Stellaris</fullName>
                </value>
                <value>
                    <fullName>Stellaris PC</fullName>
                </value>
                <value>
                    <fullName>CX1000</fullName>
                </value>
                <value>
                    <fullName>CX2000</fullName>
                </value>
                <value>
                    <fullName>CX3000</fullName>
                </value>
                <value>
                    <fullName>Protege</fullName>
                </value>
                <value>
                    <fullName>Premiere</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>SRG__c</fullName>
        <description>APAC CHNSU field:SRG of Engineer Service Visit Machine</description>
        <label>SRG</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Site_Conditions__c</fullName>
        <description>APAC CHNSU field:The Site Condition of Engineer Service Visit Machine</description>
        <label>Site Conditions</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Solution_in_Operation1__c</fullName>
        <label>Solution in Operation</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Solution_in_Operation2__c</fullName>
        <label>Solution in Operation</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>X1_8mm_AMO__c</fullName>
        <label>1.8mm - AMO</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>X1_8mm_Alcon__c</fullName>
        <label>1.8mm - Alcon</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>X1_8mm_B_L__c</fullName>
        <label>1.8mm - B&amp;L</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>X1_8mm_HumanOptics__c</fullName>
        <label>1.8mm - HumanOptics</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>X1_8mm_Others__c</fullName>
        <label>1.8mm - Others</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>X1_8mm_Total__c</fullName>
        <formula>X1_8mm_Alcon__c  +  X1_8mm_AMO__c  +  X1_8mm_B_L__c  +  X1_8mm_HumanOptics__c  +  X1_8mm_Others__c  +  X1_8mm_Zeiss__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>1.8mm - Total</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>X1_8mm_Zeiss__c</fullName>
        <label>1.8mm - Zeiss</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>X2_2mm_AMO__c</fullName>
        <label>2.2mm - AMO</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>X2_2mm_Alcon__c</fullName>
        <label>2.2mm - Alcon</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>X2_2mm_B_L__c</fullName>
        <label>2.2mm - B&amp;L</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>X2_2mm_HumanOptics__c</fullName>
        <label>2.2mm - HumanOptics</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>X2_2mm_Others__c</fullName>
        <label>2.2mm - Others</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>X2_2mm_Total__c</fullName>
        <formula>X2_2mm_Alcon__c + X2_2mm_AMO__c + X2_2mm_B_L__c + X2_2mm_HumanOptics__c + X2_2mm_Others__c + X2_2mm_Zeiss__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>2.2mm - Total</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>X2_2mm_Zeiss__c</fullName>
        <label>2.2mm - Zeiss</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>X2_8mm_AMO__c</fullName>
        <label>2.8mm - AMO</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>X2_8mm_Alcon__c</fullName>
        <label>2.8mm - Alcon</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>X2_8mm_B_L__c</fullName>
        <label>2.8mm - B&amp;L</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>X2_8mm_HumanOptics__c</fullName>
        <label>2.8mm - HumanOptics</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>X2_8mm_Others__c</fullName>
        <label>2.8mm - Others</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>X2_8mm_Total__c</fullName>
        <formula>X2_8mm_Alcon__c + X2_8mm_AMO__c + X2_8mm_B_L__c + X2_8mm_HumanOptics__c + X2_8mm_Others__c + X2_8mm_Zeiss__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>2.8mm - Total</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>X2_8mm_Zeiss__c</fullName>
        <label>2.8mm - Zeiss</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>Service Product</label>
    <nameField>
        <displayFormat>SP-{00000}</displayFormat>
        <label>Service Product Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Service Products</pluralLabel>
    <recordTypes>
        <fullName>APACSU_Engineer_Service_Product</fullName>
        <active>true</active>
        <label>APACSU Engineer Service Product</label>
    </recordTypes>
    <recordTypes>
        <fullName>APACSU_Service_Rep_Product</fullName>
        <active>true</active>
        <label>APACSU Service Rep Product</label>
    </recordTypes>
    <sharingModel>ControlledByParent</sharingModel>
    <validationRules>
        <fullName>APACSU_Check_Service_Product_Quality</fullName>
        <active>true</active>
        <errorConditionFormula>AND( $RecordType.Name =&apos;APACSU Service Rep Product&apos;, IsValidServiceProduct__c =0,FirstUpdate__c=True)</errorConditionFormula>
        <errorMessage>Please check your service product and fill in &apos;Product&apos;,&apos;Call Result&apos;,&apos;Call Objective&apos; and &apos;Experiences&apos;.</errorMessage>
    </validationRules>
</CustomObject>